Perkin-UAT/force-app/main/default/objects/SMAX_PS_Contact_Integration__c/SMAX_PS_Contact_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SMAX Contact Integration</label>
</CustomObject>