Perkin-UAT/force-app/main/default/objects/SMAX_PS_Contact_Integration__c/fields/SMAS_PS_Create_Contacts_on_Update__c.field-meta.xml
<CustomField>
    <fullName>SMAS_PS_Create_Contacts_on_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not Contacts should be created into SAP when they are updated, if they haven&#39;t been previously created.</description>
    <inlineHelpText>Indicates whether or not Contacts should be created into SAP when they are updated, if they haven&#39;t been previously created.</inlineHelpText>
    <label>Create Contacts on Update</label>
    <type>Checkbox</type>
</CustomField>