Perkin-UAT/force-app/main/default/objects/SMAX_PS_Contact_Integration__c/fields/SMAX_PS_Ignore_Users__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Ignore_Users__c</fullName>
    <description>Comma Separated list of tokens.
During Contact Triggers, if Current Username contains any of the tokens the Platform Events will not be sent.</description>
    <inlineHelpText>Comma Separated list of tokens.
During Contact Triggers, if Current Username contains any of the tokens the Platform Events will not be sent.</inlineHelpText>
    <label>Ignore Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>