Perkin-UAT/force-app/main/default/objects/SMAX_PS_Contact_Integration__c/fields/SMAX_PS_Send_Contact_Create_Events__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Send_Contact_Create_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Contact Create Events</label>
    <type>Checkbox</type>
</CustomField>